<resources>
    <string name="app_name">Remotly</string>
    <string name="login">Login</string>
    <string name="forget_pwd">Forget Password?</string>
    <string name="email">Email</string>
    <string name="pwd">Password</string>
    <string name="dont_have_acc">Don\'t have and account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_name">User Name</string>
    <string name="have_acc">Have an Account?</string>
    <string name="reset_pwd">Reset Password</string>
    <string name="reset_msg">Enter the email associated with your account and we\'ll send an email
    with instructions to reset your password</string>
    <string name="send_instruction_msg">Reset</string>
    <string name="chk_your_mail">Check Your Mail</string>
    <string name="chk_mail_msg">We have sent a password recover instructions to your email.</string>
    <string name="open_mail_app">Open email app</string>
    <string name="skip_forget_pwd">Skip, i\'ll confirm later</string>

    <string name="latest_jops">Latest Jobs</string>
    <string name="search_for_job">Search For Jop</string>

    <string name="search">Search</string>
    <string name="favourite">Favourite</string>
    <string name="Account">Account</string>

    <string name="Desc">Description</string>

    <string name="Seeker">Seeker</string>
    <string name="Company">Company</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>