<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".Control.ResetPassword.ResetPasswordCheckEmail">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:src="@drawable/ic_chk"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/chk_your_mail"
        android:fontFamily="@font/gtwalsheimboldweb"
        android:textSize="30sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/chk_mail_msg"
        android:fontFamily="@font/gtwalsheimweb"
        android:gravity="center"
        android:textSize="19sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/round_button"
        android:text="@string/open_mail_app"
        android:fontFamily="@font/gtwalsheimweb"/>

    <TextView
        android:id="@+id/skip_forget_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/skip_forget_pwd"
        android:textSize="19sp"
        android:fontFamily="@font/gtwalsheimweb"/>
</LinearLayout>