<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Control.UserSignUp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/exit_sign_up_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="X"
        android:textSize="30sp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/gtwalsheimweb"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:fontFamily="@font/gtwalsheimweb"
        android:layout_marginTop="64dp"
        android:layout_marginStart="32dp"/>
    <!-- Start Form -->
    <EditText
        android:id="@+id/user_name_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="24dp"
        android:drawableLeft="@drawable/ic_user"
        android:fontFamily="@font/gtwalsheimweb"
        android:gravity="center"/>

    <EditText
        android:id="@+id/email_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:drawableLeft="@drawable/ic_email"
        android:fontFamily="@font/gtwalsheimweb"
        android:gravity="center"/>

    <EditText
        android:id="@+id/password_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pwd"
        android:inputType="textPassword"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:drawableStart="@drawable/ic_pwd"
        android:fontFamily="@font/gtwalsheimweb"
        android:gravity="center"/>

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/round_button"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/gtwalsheimweb"
        android:drawableEnd="@drawable/ic_arrow"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_acc"
            android:textSize="19sp"
            android:fontFamily="@font/gtwalsheimweb"/>
        <TextView
            android:id="@+id/login_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/main_color"
            android:fontFamily="@font/gtwalsheimweb"
            android:textSize="20sp"/>
    </LinearLayout>
    <!-- End Form -->


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/illustration"/>


</LinearLayout>