<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Control.ResetPassword.ResetPassword">

    <TextView
        android:id="@+id/exit_forget_pwd_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="X"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:fontFamily="@font/gtwalsheimboldweb"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_pwd"
        android:fontFamily="@font/gtwalsheimboldweb"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/gtwalsheimweb"
        android:textSize="15sp"
        android:text="@string/reset_msg"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email address"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/gtwalsheimweb"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/email_resetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text"
        android:hint="@string/email"
        android:padding="12dp"
        android:fontFamily="@font/gtwalsheimweb"/>
    <Button
        android:id="@+id/reset_pwd_reset_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_instruction_msg"
        android:layout_marginTop="32dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/round_button"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/forgot_pwd"/>

</LinearLayout>