<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3"

    tools:context=".Control.User.Login.UserLogin">


    <!-- Start Top Layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="@drawable/gradient_login">

        <ImageView
            android:id="@+id/logo_login_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:src="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <!-- End Top Layout -->

    <!-- Start Bottom Layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:layout_weight="1"
        android:background="@drawable/view_bg"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/email_text_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:fontFamily="@font/main_light_font"
            android:hint="E-mail"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.13"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.120000005"
            android:elevation="10dp"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp" />



        <EditText
            android:id="@+id/password_text_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:padding="16dp"
            android:ems="10"
            android:hint="Password"
            android:textColor="@color/black"
            android:fontFamily="@font/main_light_font"
            android:background="@drawable/edit_text"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_text_login_form"
            app:layout_constraintVertical_bias="0.07999998"
            android:elevation="10dp"
            android:drawableStart="@drawable/ic_pwd"
            android:drawablePadding="10dp"/>

        <TextView
            android:id="@+id/forget_password_login_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_pwd"
            android:textColor="@color/gray"
            android:textSize="16sp"
            android:fontFamily="@font/main_light_font"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.85"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_text_login_form"
            app:layout_constraintVertical_bias="0.060000002" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@drawable/round_button"
            android:paddingStart="60dp"
            android:paddingEnd="60dp"
            android:fontFamily="@font/main_light_font"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_text_login_form"
            app:layout_constraintVertical_bias="0.26999998" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_button">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_acc"
                android:textColor="@color/gray"
                android:textSize="20sp"
                android:fontFamily="@font/main_light_font"/>
            <TextView
                android:id="@+id/sign_up_login_form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:fontFamily="@font/main_light_font"
                android:textColor="@color/main_color"
                android:textSize="20sp"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <!-- End Top Layout -->
</androidx.constraintlayout.widget.ConstraintLayout>